// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts page should render correctly with a few skills 1`] = `
<TheTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerDay)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerWeek)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerMonth)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerYear)",
      },
    ]
  }
  filterText=""
  filteredRows={
    Immutable.List [
      Object {
        "id": 0,
        "maximumMinutesPerDay": 1,
        "maximumMinutesPerMonth": null,
        "maximumMinutesPerWeek": 2,
        "maximumMinutesPerYear": null,
        "name": "Contract 1",
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 1,
        "maximumMinutesPerDay": null,
        "maximumMinutesPerMonth": 3,
        "maximumMinutesPerWeek": null,
        "maximumMinutesPerYear": 4,
        "name": "Contract 2",
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/skill",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={true}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/skill",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/skill",
      "url": "localhost:8080/0/skill",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={2}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={
    Immutable.List [
      Object {
        "id": 0,
        "maximumMinutesPerDay": 1,
        "maximumMinutesPerMonth": null,
        "maximumMinutesPerWeek": 2,
        "maximumMinutesPerYear": null,
        "name": "Contract 1",
        "tenantId": 0,
        "version": 0,
      },
      Object {
        "id": 1,
        "maximumMinutesPerDay": null,
        "maximumMinutesPerMonth": 3,
        "maximumMinutesPerWeek": null,
        "maximumMinutesPerYear": 4,
        "name": "Contract 2",
        "tenantId": 0,
        "version": 0,
      },
    ]
  }
  sortByIndex={0}
  title="Trans(i18nKey=contracts)"
/>
`;

exports[`Contracts page should render correctly with no skills 1`] = `
<TheTable
  columns={
    Array [
      Object {
        "name": "Trans(i18nKey=name)",
        "sorter": [Function],
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerDay)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerWeek)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerMonth)",
      },
      Object {
        "name": "Trans(i18nKey=maxMinutesPerYear)",
      },
    ]
  }
  filterText=""
  filteredRows={Immutable.List []}
  history={
    Object {
      "action": "PUSH",
      "block": [MockFunction],
      "createHref": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "length": 1,
      "listen": [MockFunction],
      "location": Object {
        "hash": "",
        "pathname": "/0/skill",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [MockFunction],
    }
  }
  isReversed={true}
  itemsPerPage={10}
  location={
    Object {
      "hash": "",
      "pathname": "/0/skill",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": true,
      "params": Object {},
      "path": "/0/skill",
      "url": "localhost:8080/0/skill",
    }
  }
  newRowWrapper={[Function]}
  numOfFilteredRows={0}
  onSorterChange={[Function]}
  page={1}
  rowWrapper={[Function]}
  rowsInPage={Immutable.List []}
  sortByIndex={0}
  title="Trans(i18nKey=contracts)"
/>
`;

exports[`Contracts page should render the editor correctly 1`] = `
<TableRow>
  <TableCell>
    <TextInput
      onChange={[Function]}
      value="Contract 1"
    />
  </TableCell>
  <TableCell>
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </TableCell>
  <TableCell>
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value={2}
    />
  </TableCell>
  <TableCell>
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <TableCell>
    <TextInput
      min={0}
      onChange={[Function]}
      type="number"
      value=""
    />
  </TableCell>
  <RowEditButtons
    isValid={true}
    onClose={[Function]}
    onSave={[Function]}
  />
</TableRow>
`;

exports[`Contracts page should render the viewer correctly 1`] = `
<TableRow>
  <TableCell>
    <Text>
      Contract 1
    </Text>
  </TableCell>
  <TableCell>
    <Text>
      1
    </Text>
  </TableCell>
  <TableCell>
    <Text>
      2
    </Text>
  </TableCell>
  <TableCell>
    <Text />
  </TableCell>
  <TableCell>
    <Text />
  </TableCell>
  <RowViewButtons
    onDelete={[Function]}
    onEdit={[Function]}
  />
</TableRow>
`;
